@@ -233,7 +233,7 @@ Invoking [Babel](http://babel.edgewall.org/)'s extractor at the command line in 
 
 Will output a gettext catalog to stdout including the following:
 
-    #. This is a proper name. See the gettext
+    #. TRANSLATORS: This is a proper name. See the gettext
     #. manual, section Names.
     #: myproj/templates/name.html:5
     msgid "Francois Pinard"
